# the-sidecar-pattern-lp-author

./: Cargo.toml
config/: local-secret-store.yaml  secrets.json
order_management/: Cargo.toml
order_management/src/: main.rs
sales_tax_rate/: Cargo.toml
sales_tax_rate/src/: main.rs
