[package]
name = "order_management"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dapr_sdk_wasi = { git = "https://github.com/second-state/dapr-sdk-wasi" }
hyper_wasi = { version = "0.15", features = ["full"] }
mysql_async_wasi = "0.31"
reqwest_wasi = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"] }
url = "2.3"
