[package]
name = "sales_tax_rate_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
csv = "1.1"
dapr_sdk_wasi = { git = "https://github.com/second-state/dapr-sdk-wasi", version = "0.0.1" }
hyper_wasi = { version = "0.15", features = ["full"] }
serde_json = "1.0.113"
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"] }
